# edl

./: .git-blame-ignore-revs  .gitattributes  .mailmap  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  package.json  test.edl
.github/: .gitattributes  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
cli/: Cargo.toml
cli/src/: lsp.rs  main.rs
core/: Cargo.toml  install.sh
core/src/: ast.rs  lexer.rs  lib.rs  parser.rs  runtime.rs
docs/: dev_runtime.md  install_packages.md  librairies.md  syntaxe.md
tests/: scripts.edl  test.edl
