[package]
name = "cli"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
rustyline = "10.0"
core = { path = "../core" }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
serde_json = "1.0.140"
tower-lsp = "0.18"
tokio = { version = "1", features = ["full"] }
pin = "0.2.9"
marker = "0.9.0"
async-trait = "0.1.88"
error = "0.1.9"
io = "0.0.2"
fs = "0.0.5"
option = "0.0.0"
