[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["Sky Genesis Enterprise <contact@skygenesisenterprise.com>"]
description = "Core library for the EDL language, including parser and runtime."
license = "GPLv3 licence"
repository = "https://github.com/Sky-Genesis-Enterprise/edl"

[dependencies]
# Gestion des erreurs ergonomique
thiserror = "1.0"
anyhow = "1.0"

# Pour la sérialisation/desérialisation JSON si besoin
serde = { version = "1.0", features = ["derive"] }

# Pour le parsing (si tu utilises nom ou autre)
nom = "7"  # Ou un autre crate de parsing si besoin

# Pour les tests (tu peux enlever si pas besoin)
# lazy_static = "1.4" (par exemple, si besoin de constantes statiques)

[dev-dependencies]
# Pour les tests unitaires, benchmarking etc.
pretty_assertions = "1.3"

[features]
default = []